# cypy

./: .gitignore  README.md  build.py  build.sh  buildozer.spec  main.py  pyproject.toml  run.sh  setup.iss
.github/: FUNDING.yml
.github/workflows/: build.yml
cypy/: __init__.py  app.py
cypy/core/: config.py  translator.py  types.py  ui.py  utils.py  version.py  yolo_onnx.py
cypy/core/providers/: __init__.py  opencodego.py
cypy/gui/: __init__.py  controller.py  design.kv  widgets.py  window.py
scripts/: setup.sh
