[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cypy"
version = "0.2504"
description = "CYPY: Cyrene's Python Manga Translator - Auto translate manga panels using YOLO and Gemini"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "PyMuPDF",
    "numpy",
    "Pillow",
    "ultralytics",
    "google-genai",
    "python-dotenv",
    "requests",
    "rarfile"
]

[project.scripts]
cypy = "cypy.app:main"

[tool.setuptools.packages.find]
include = ["cypy*"]
