[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cypy"
dynamic = ["version"]
description = "CYPY: Cyrene's Python Manga Translator - Auto translate manga panels using YOLO and Gemini"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "PyMuPDF",
    "numpy",
    "Pillow",
    "onnxruntime",
    "google-genai",
    "python-dotenv",
    "requests",
    "rarfile",
    "kivy"
]

[project.scripts]
cypy = "cypy.app:main"

[tool.setuptools.packages.find]
include = ["cypy*"]

[tool.setuptools.dynamic]
version = {attr = "cypy.core.version.APP_VER"}
